@@ -1,3 +1,7 @@
+2009-09-30  Robby Stephenson  <robby@periapsis.org>
+
+	* Added Wine.com data source.
+
 2009-09-29  Robby Stephenson  <robby@periapsis.org>
 
 	* Updated GCstar import support for video games and board games.
